possibly fixed a display problem on IE due to flex elements

--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -22,9 +22,6 @@ body {
        -o-font-feature-settings: "kern" 1;
           font-feature-settings: "kern" 1;
   font-kerning: normal;
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
 }
 
 
